Changing to dark theme

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
               <section>
                   <h2 class="heading">Welcome to my page!</h2>
-                  <p>Hello, my name is Vu 'Erik' Nguyen, I am an IT student in Centria. I come from Vietnam, an pretty country in the South East of Asian. I am a person who always eager for knowleadge and new things that's why I am here in Finland for new opportunities and challenges. 
+                  <p>Hello, my name is <span style="color: #41B883">Vu 'Erik' Nguyen</span>, I am an IT student in <span style="color: #EF5B5B">Centria</span>. I come from <span style="color: #61DAFB">Vietnam</span>, an pretty country in the South East of Asian. I am a person who always eager for knowleadge and new things that's why I am here in Finland for new opportunities and challenges. 
               </section>
             
           </div>
@@ -38,7 +38,7 @@
             <aside>
               <h2 class="heading">Info</h2>
               <div id="profile-pic">
-                <img src="https://cdn.glitch.com/5f6e3b98-fc06-480a-804d-1b9717228f88%2FIMG_1450-02.jpeg?1558342077822" alt="A picture of myself" height="100%" width="100%">
+                <img src="https://cdn.glitch.com/1f2f96a0-67de-47b7-af80-68f4fb4aead5%2Fmypic-bnw.jpeg?1558384085424" alt="A picture of myself" height="100%" width="100%">
               </div>
               <div id="my-info">
                   <ul>
