--- a/interest.html
+++ b/interest.html
@@ -28,7 +28,7 @@
             
               <section>
                   <h2 class="heading">Thing I love to do!</h2>
-                  <p>In my free time, I would like to go out side into the nature or spend time to hang out with my friends. I love reading, food and travel as well. My passion is travelling to other cultures and tasting their foods.</p>
+                  <p>In my free time, I would like to go out side into the <span style="color: #41B883">nature</span> or spend time to <span style="color: #F0D91D">hang out</span> with my friends. I love <span style="color: #006DB2">reading</span>, <span style="color: chocolate">food</span> and <span style="color: #DE4B25">travel</span> as well. My passion is travelling to other cultures and tasting their foods.</p>
               </section>
             
           </div>
@@ -37,7 +37,7 @@
             <aside>
               <h2 class="heading">Info</h2>
               <div id="profile-pic">
-                <img src="https://cdn.glitch.com/5f6e3b98-fc06-480a-804d-1b9717228f88%2FIMG_1450-02.jpeg?1558342077822" alt="A picture of myself" height="100%" width="100%">
+                <img src="https://cdn.glitch.com/1f2f96a0-67de-47b7-af80-68f4fb4aead5%2Fmypic-bnw.jpeg?1558384085424" alt="A picture of myself" height="100%" width="100%">
               </div>
               <div id="my-info">
                   <ul>
