--- a/skills.html
+++ b/skills.html
@@ -30,9 +30,9 @@
               <section>
                   <h2 class="heading">What I can do!</h2>
                   <p>As an IT student, I have basic experiences in fundamental programming, they way that computer works and how to analyze and solve a problem. Besides, I am familiar with:</p>
-                  <p>Fundamental web technologies: HTML, CSS, JS</p>
-                  <p>Fundamental Design: Colors, Composition</p>
-                  <p>Designing layout with Wordpress and Elementor</p>
+                  <p><span style="color:  #61DAFB">Fundamental web technologies:</span> <span style="color: #DE4B25">HTML</span>, <span style="color: #006DB2">CSS</span>, <span style="color: #F0D91D">JS</span></p>
+                  <p><span style="color:  #61DAFB">Fundamental Design:</span> <span style="color: green">Colors</span>, <span style="color: turquoise">Composition</span></p>
+                  <p><span style="color:  #61DAFB">Designing layout with <span style="color: #21759B">Wordpress</span> and <spam style="color: #B63163">Elementor</spam></span></p>
                       
               </section>
             
@@ -42,7 +42,7 @@
             <aside>
               <h2 class="heading">Info</h2>
               <div id="profile-pic">
-                <img src="https://cdn.glitch.com/5f6e3b98-fc06-480a-804d-1b9717228f88%2FIMG_1450-02.jpeg?1558342077822" alt="A picture of myself" height="100%" width="100%">
+                <img src="https://cdn.glitch.com/1f2f96a0-67de-47b7-af80-68f4fb4aead5%2Fmypic-bnw.jpeg?1558384085424" alt="A picture of myself" height="100%" width="100%">
               </div>
               <div id="my-info">
                   <ul>
