Changing name to Vu Nguyen

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </div>
               <div id="my-info">
                   <ul>
-                    <li><p>Vu 'Erik' Nguyen</p></li>
+                    <li><p>Vu Nguyen</p></li>
                     <li><p>Vietnamese</p></li>
                     <li><p>10-01-1991</p></li>
                     <li><p>NITK17K</p></li>
